<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="secret_thumb_licence_start">首次使用柏布拉特产品前，请仔细阅读</string>
    <string name="secret_key_licence">最终用户许可协议</string>
    <string name="secret_thumb_licence_end">
        中规定的所有权利和限制。一旦开始使用，即表示您同意并接受本软件许可协议的约束。若不同意，且您购买的产品符合柏布拉特退货政策，您可以到购买产品的专卖店或授权分销商退还产品。
    </string>
    <string name="secret_thumb_improve_start">欢迎来到EAGLE用户界面。为提升用户体验，柏布拉特邀您加入</string>
    <string name="secret_key_improve">EAGLE用户体验改进计划。</string>
    <string name="secret_thumb_improve_end">
        请仔细阅读用户体验改进计划，并选择是否自愿加入。若选择加入，柏布拉特将会从终端设备收集您的个人数据。柏布拉特会严格保护您的数据，若需要了解更多关于EAGLE保护用户数据、身份和隐私的信息，请查阅
    </string>
    <string name="secret_key_private">”柏布拉特隐私政策“。</string>
    <string name="secret_join">参与EAGLE用户体验改进计划。</string>
    <string name="secret_licence_title">最终用户许可协议</string>
    <string name="secret_improve_title">用户体验改进计划</string>
    <string name="secret_private_title">柏布拉特隐私政策</string>


    <string name="app_name">Luna</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="boot_sound">boot_sound</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="button_j">button_j</string>
    <string name="button_d">button_d</string>
    <string name="welcome">Welcome</string>
    <string name="it">IT工程师</string>
    <string name="study">学习ing</string>
    <string name="love">恋爱ing</string>
    <string name="cast">挣钱ing</string>
    <string name="hard">努力ing</string>
    <string name="can">I thick i can</string>
    <string name="strategy">strategy</string>
    <string name="template">template</string>
    <string name="array">array</string>
    <string name="view">view</string>
    <string name="blur">blur</string>
    <string name="java">java</string>
    <string name="note">note</string>
    <string name="bonus">bonus</string>
    <string name="sound">sound</string>
    <string name="layout">layout</string>
    <string name="ensure">ensure</string>
    <string name="query">query</string>
    <string name="arrow">arrow</string>
    <string name="bell_tree">bell_tree</string>
    <string name="bongo">bongo</string>
    <string name="car_lock">car_lock</string>
    <string name="cave">cave</string>
    <string name="chess">chess</string>
    <string name="crystal_drop">crystal_drop</string>
    <string name="cuckoo">cuckoo</string>
    <string name="doorbell">doorbell</string>
    <string name="drip">drip</string>
    <string name="echo">echo</string>
    <string name="tejat">tejat</string>
    <string name="reset">reset</string>
    <string name="red">red</string>
    <string name="black">black</string>
    <string name="paint">paint</string>
    <string name="living">living</string>
    <string name="scroll_first">This is first child view</string>
    <string name="scroll_second">This is second child view</string>
    <string name="scroll_third">This is third child view</string>
    <string name="alarms">alarms</string>
    <string name="animationsounds">animationsounds</string>
    <string name="notifications">notifications</string>
    <string name="notifications2">notifications2</string>
    <string name="notifications3">notifications3</string>
    <string name="ringtones">ringtones</string>
    <string name="ui">ui</string>
    <string name="custom">custom</string>
    <string name="flow">flow</string>
    <string name="waterfall">waterfall</string>
    <string name="listview">listview</string>
    <string name="xfermode">xfermode</string>
    <string name="bitmapshader">bitmapshader</string>
    <string name="draw">draw</string>
    <string name="path">path</string>
    <string name="sitch">switch</string>
    <string name="scroller">scroller</string>
    <string name="curve">curve</string>
    <string name="bezier2">bezier2</string>
    <string name="bezier3">bezier3</string>

    <string name="dialog">dialog</string>
    <string name="storage">storage</string>
    <string name="dialog_restart">重启</string>
    <string name="dialog_shut_down">关机</string>
    <string name="wave">wave</string>
    <string name="rotate">rotate</string>
    <string name="bitmap">bitmap</string>
    <string name="numberpick">numberpick</string>
    <string name="repeat">重复</string>
    <string name="week">周一到周五</string>
    <string name="rington">铃声</string>
    <string name="virb">震动</string>
    <string name="name">闹钟名</string>
    <string name="defaul">默认</string>
    <string name="morning">早上好</string>
    <string name="delete">删除闹钟</string>
    <string name="once">只响一次</string>
    <string name="friday">周一到周五</string>
    <string name="everyday">每天</string>
    <string name="custom2">自定义</string>
    <string name="cancel">取消</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday2">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="ensure2">确定</string>
    <string name="panel">panel</string>
    <string name="watch">watch</string>
    <string name="spinner">spinner</string>
    <string name="interfaces">interface</string>
    <string name="launcher">launcher</string>
    <string name="r10">r10</string>
    <string name="provision">provision</string>
    <string name="recyclerview">recyclerview</string>
    <string name="frame_layout">frame_layout</string>
    <string name="next">next</string>
    <string name="provision_jump">jump</string>
    <string name="dis">dis</string>
    <string name="select_language">语言选择</string>
    <string name="agreement">协议与条款</string>
    <string name="stop_clock">上滑停止闹钟</string>
    <string name="click_snooze">点击稍后提醒</string>
    <string name="time">time</string>
    <string name="write">write</string>
    <string name="txt">txt</string>
    <string name="click">click</string>
    <string name="markfilter">markfilter</string>
    <string name="upload_file">upload_file</string>
    <string name="upload_name">upload_name</string>
    <string name="ripple">ripple</string>
    <string name="circlesport">circlesport</string>
    <string name="number_game">number_game</string>
    <string name="music">music</string>
    <string name="pdf">pdf</string>
    <string name="bezier_wave">bezier_wave</string>
    <string name="path_measure">path_measure</string>
    <string name="dn">dn</string>
    <string name="pieview">pieview</string>
    <string name="base_animator">base_animator</string>
    <string name="splash_animator">splash_animator</string>
    <string name="btn_object">btn_object</string>
    <string name="btn_animatorset">btn_animatorset</string>
    <string name="btn_interpolator">btn_interpolator</string>
    <string name="btn_valueholder">btn_valueholder</string>
    <string name="btn_evaluator">btn_evaluator</string>
    <string name="btn_value">btn_value</string>
    <string name="attr">attr</string>
    <string name="xml">xml</string>
    <string name="invoice">invoice</string>
    <string name="secret">secret</string>
    <string name="wall_paper">wall_paper</string>
    <string name="save_image">save_image</string>
    <string name="show_image">show_image</string>
    <string name="gallery">gallery</string>
    <string name="input_times">请填写次数</string>
    <string name="upload">上传</string>
    <string name="disk_lrucache">disLruCache</string>
    <string name="disk_input">disk_input</string>
    <string name="disk_output">disk_output</string>
    <string name="disk_lru_show">disk_lru_show</string>
    <string name="thread">thread</string>
    <string name="thread_name">thread_name</string>
    <string name="thread_pool">thread_pool</string>
    <string name="move_count">移动步数：</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="kill">kill</string>
    <string name="show_content">show_content</string>
    <string name="pri_0">pri_0</string>
    <string name="pri_1">pri_1</string>
    <string name="pub_0">pub_0</string>
    <string name="pub_1">pub_1</string>
    <string name="custom_get">custom_get</string>
    <string name="custom_set">custom_set</string>
    <string name="hanoi">hanoi</string>
    <string name="poker">poker</string>
    <string name="gold">gold</string>
    <string name="cow">cow</string>
    <string name="create_room">create_room</string>
    <string name="join_room">join_room</string>
    <string name="ready">ready</string>
    <string name="unready">unready</string>
    <string name="room_start">room_start</string>
    <string name="room_reset">room_reset</string>
    <string name="count">>= 200000</string>
    <string name="bullcow">bullcow</string>
    <string name="register_user">registerUser</string>
    <string name="join">join</string>
    <string name="unjoin">unjoin</string>
    <string name="leetcode">leetcode</string>
</resources>
