<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <!-- mSoundPlayer.load(mContext, R.raw.arrow, 1);// 1
    mSoundPlayer.load(mContext, R.raw.bell_tree, 1);// 2
    mSoundPlayer.load(mContext, R.raw.bongo, 1);// 3
    mSoundPlayer.load(mContext, R.raw.car_lock, 1);// 4
    mSoundPlayer.load(mContext, R.raw.cave, 1);// 5
    mSoundPlayer.load(mContext, R.raw.chess, 1);// 6
    mSoundPlayer.load(mContext, R.raw.crystal_drop, 1);// 7
    mSoundPlayer.load(mContext, R.raw.cuckoo, 1);// 8
    mSoundPlayer.load(mContext, R.raw.doorbell, 1);// 9
    mSoundPlayer.load(mContext, R.raw.drip, 1);// 10
    mSoundPlayer.load(mContext, R.raw.echo, 1);// 11-->

    <Button
        android:id="@+id/arrow"
        android:text="@string/arrow"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bell_tree"
        android:text="@string/bell_tree"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bongo"
        android:text="@string/bongo"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/car_lock"
        android:text="@string/car_lock"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cave"
        android:text="@string/cave"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/chess"
        android:text="@string/chess"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/crystal_drop"
        android:text="@string/crystal_drop"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cuckoo"
        android:text="@string/cuckoo"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/doorbell"
        android:text="@string/doorbell"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/drip"
        android:text="@string/drip"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/echo"
        android:text="@string/echo"
        android:onClick="notificationSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

 <Button
         android:id="@+id/tejat"
         android:text="@string/tejat"
         android:onClick="notificationSound"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />


</LinearLayout>