<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/alarms"
        android:text="@string/alarms"
        android:onClick="sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/animationsounds"
        android:text="@string/animationsounds"
        android:onClick="sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/notifications"
        android:text="@string/notifications"
        android:onClick="sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ringtones"
        android:text="@string/ringtones"
        android:onClick="sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ui"
        android:text="@string/ui"
        android:onClick="sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>