<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/strategy"
        android:layout_width="match_parent"
        android:text="@string/strategy"
        android:onClick="java"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/template"
        android:layout_width="match_parent"
        android:text="@string/template"
        android:onClick="java"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/array"
        android:layout_width="match_parent"
        android:text="@string/array"
        android:onClick="java"
        android:layout_height="wrap_content" />

</LinearLayout>